# lead_scrapper_microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  login_google.py  login_linkedin.py  main.py  pyproject.toml  requirements.txt  test_scrape.py
api/: __init__.py  dependencies.py
api/routes/: jobs.py  leads.py  services.py
core/: browser_manager.py  config.py  logging.py  security.py
db/: __init__.py  base.py  session.py
db/migrations/: env.py
db/migrations/versions/: __init__.py
db/models/: __init__.py  collection.py  failed_job.py  job.py  lead.py
schemas/: __init__.py
services/: __init__.py  pipeline.py
services/discovery/: discovery.py
services/enrichment/: __init__.py  enrichment.py  linkedin.py  phone.py
static/: docs.html  index.backup.html  index.html
